avoid covering up author

--- a/src/styles/ironies.css
+++ b/src/styles/ironies.css
@@ -29,7 +29,7 @@
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
     transition: transform 0.1s;
     min-height: 50vh;
-    max-height: 90vh;
+    max-height: 70vh;
     overflow: auto;
     display: var(--irony-display);
 
